log/build_2026-03-30_21-18-51/pioneer/stderr.log
  File "/home/jeremy/Resources/install/pioneer/lib/python3.12/site-packages/pioneer/velocity_publisher.py", line 167
    front = self.self.get_sector_min(self.ranges, -30, 30)\()
                                                           ^
SyntaxError: unexpected character after line continuation character

